6-improve-authentication-cryptography-security * Test required Client Certificate

--- a/client_template.conf
+++ b/client_template.conf
@@ -6,8 +6,10 @@ resolv-retry infinite
 nobind
 persist-key
 persist-tun
-tls-client
+
+#tls-client
 remote-cert-tls server
+
 ca ca.crt          #Change the name certificates you exported for CA
 cert client.crt     #Change the name certificates you exported For Remote user 
 key client.key      #Change the name key you exported For Remote user
