--- a/client_template.conf
+++ b/client_template.conf
@@ -6,13 +6,15 @@ resolv-retry infinite
 nobind
 persist-key
 persist-tun
-tls-client
+
+#tls-client
 remote-cert-tls server
+
 ca ca.crt          #Change the name certificates you exported for CA
 cert client.crt     #Change the name certificates you exported For Remote user 
 key client.key      #Change the name key you exported For Remote user
  
-cipher AES-128-CBC
+cipher AES-256-CBC
 auth SHA1
 pull
 auth-user-pass client.auth
