10-add-route-to-reach-mikrotk-local-network
* Added route to reach Mikrotik Local Network
* fix #10

--- a/client_template.conf
+++ b/client_template.conf
@@ -11,13 +11,12 @@ persist-tun
 remote-cert-tls server
 
 ca ca.crt          #Change the name certificates you exported for CA
-cert client.crt     #Change the name certificates you exported For Remote user 
-key client.key      #Change the name key you exported For Remote user
+cert client.crt    #Change the name certificates you exported For Remote user 
+key client.key     #Change the name key you exported For Remote user
  
 cipher AES-256-CBC
 auth SHA1
 pull
 auth-user-pass client.auth
 verb 3
-#route 192.168.10.0 255.255.255.0    # Publish your Network which you want to make reachable
-#route 192.168.20.0 255.255.255.0    # Behind the Mikrotik Router
+route 192.168.10.0 255.255.255.0    	# Publish your Network which you want to make reachable. Local Mikrotik Network.
