--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,8 @@
 name: Connection OpenVPN
 
 on:
-  pull_request:
-    branches: [ "*" ]
+  # pull_request:
+  #   branches: [ "*" ]
 
   schedule:
   - cron: "*/5 * * * *"
