--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,13 @@
 name: Connection OpenVPN
 
 on:
-  pull_request:
-    branches: [ "*" ]
+  # pull_request:
+  #   branches: [ "*" ]
+
+  schedule:
+  - cron: "*/1 * * * *"
+
+
 
 jobs:
   build:
@@ -27,5 +32,6 @@ jobs:
       run: sed 's/REMOTE_IP_ADDRESS/${{ secrets.REMOTE_IP_ADDRESS }}/' client_template.conf > client.conf
     - name: Connection OpenVPN
       run: sudo openvpn --config client.conf&
-
+    - name: date
+      run: date
       
