--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,10 @@ jobs:
     - name: Replace REMOTE_IP_ADDRESS variable
       run: sed 's/REMOTE_IP_ADDRESS/${{ secrets.REMOTE_IP_ADDRESS }}/' client_template.conf > client.conf
     - name: Connection OpenVPN
-      run: sudo openvpn --config client.conf&
+      run: |
+        sudo openvpn --config client.conf&
+        sleep 20s #found the best solution for this
+        echo $? 
     - name: date
       run: date
       
