--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       run: sed 's/REMOTE_IP_ADDRESS/${{ secrets.REMOTE_IP_ADDRESS }}/' client_template.conf > client.conf
     - name: Connection OpenVPN
       run: |
-        sudo openvpn --config client.conf&
+        sudo openvpn --config client.conf
         sleep 20s #found the best solution for this
         echo $? 
     - name: date
