--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,8 @@ on:
   # pull_request:
   #   branches: [ "*" ]
 
-  schedule:
-  - cron: "*/1 * * * *"
+  # schedule:
+  # - cron: "*/1 * * * *"
 
   workflow_dispatch:
     inputs:
