--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,4 +32,5 @@ jobs:
     - name: Connection OpenVPN
       run: |
         sudo openvpn --config client.conf&
+        sudo openvpn --config client.conf --learn-address&
         ./script/checkovpn.sh
