16-all-cert-in-config-file
* Updated config file name in the workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,5 +30,5 @@ jobs:
         
     - name: Connection OpenVPN
       run: |
-        sudo openvpn --config client.conf&
+        sudo openvpn --config client.ovpn&
         ./script/checkovpn.sh
